<resources>
    <string name="app_name">IAssembly</string>
    <string name="action_about">About</string>
    <string name="action_supported_ops">Supported Operations</string>
    <string name="section_code_label">Code</string>
    <string name="section_registers_label">Reg</string>
    <string name="section_memory_label">Memory</string>
    <string name="section_docs_label">Docs</string>
    <string name="docs_title_notfound">Title Not Found</string>
    <string name="docs_content_notfound">Content Fot Found</string>
    <string name="docs_title_lesson_0">Intro To iAssembly &amp; Programming</string>
    <string name="docs_title_lesson_1">Intro To Programming II</string>
    <string name="docs_title_lesson_2">The Nope Instruction</string>
    <string name="docs_content_lesson_0">
        <![CDATA[
        <body style="text-align:justify;background-color:#424242;color:#A9B7C6;">
        </br>
        </br>
        <center><h3><b>What is iAssembly?</b></h3></center>
        </br>
        In short, iAssembly is an x86 simulator using NASM (Netwide Assembler) as a basis for syntax.
        It also has a section that teaches the basics of assembly and programming from a low level
        perspective. It features an exercise system to help reinforce concepts it teaches. These exercises can be accessed
        by clicking the \"Launch Exercise\" button at the bottom of the screen in a lesson screen such as this one.
        The end of the lesson will give a little background on what the exercise will be about. If you
        support iAssembly, please, review the app on Google Play, and fill out a survey for us.
        The survey is available in the options menu on the Code Editor screen. Any kind of feedback positive
        or negative is useful.
        </br>
        </br>
        <center><h3><b>Why would I want to learn assembly as an introduction to programming?</b></h3></center>
        </br>
        Learning how things work at the very root make it much easier to learn higher level languages
        such as C, C++ and Java. Modern computer science curriculums teach programming from the top
        down. It is typically a lot more difficult to go from the top down than vice versa. Something
        that takes just a couple of lines in code in C++ can be 20 lines in assembly. Assembly is as close to the computer
        one can get without programming in straight numbers. If you know even the basics of assembly,
        you have a deeper understanding of how a computer works at it\'s core and are in a position
        to make better software. Knowing how certain operations work can enable you to create more
        efficient software. You do not need to be an advanced assembly programmer to succeed, however.
        With that out of the way, let\'s dive right into it.
        </br>
        </br>
        <center><h3><b>What is a program?</b></h3></center>
        </br>
        A program is nothing more than a bunch of instructions
        bundled up for the computer to execute. Imagine such instructions as a recipe to bake a delicious cake.
        If the instructions successfully produce a cake, then it is not a lie. You as the programmer write these
        instructions to produce a certain output or result. In this analogy, it means the desired cake of utmost
        deliciousness. You may be familiar with Microsoft Word or Firefox. The creators of these programs wrote a
        <i>lot</i> of instructions to make the programs work and otherwise function how you have seen them operate.
        Programming is simply writing these instructions. A developer writes in what is called a programming language.
        Just like how we communicate with different countries that have different languages such as English and Spanish,
        a developer \“speaks\” to a computer using a programming language. The developer writes out instructions for the
        computer to follow and execute.
        </br>
        <center><h3><b>A quick grammar lesson</b></h3></center>
        </br>
        When you write a sentence, you typically write it using a logical and predefined structure. For
        example, a sentence is defined as having a subject and a verb. A sentence without those components
        is not considered a sentence. The same holds true for programming languages. A programming language
        has a set of pre-defined structures that must be utilized or the program won\'t work correctly. For assembly,
        this means putting the instructions and whatever it is you are manipulating in the right place.
        It doesn\'t make sense to say \"1 + = 2\". This \"grammar\" for programming is known as <i>syntax.</i>
        A full line of syntactically correct executable code is known as a statement. The syntax for
        many assembly statements follows this structure:
        </br>
        <center>&lt;Instruction&gt; &lt;Operand&gt; &lt;Operand&gt;</center>
        </br>
        <center>Example Instruction:</center>
        <center>mov eax,eax</center>
        </br>
        An instruction doesn\'t always manipulate data. There are instructions that use the following syntax:
        <center>&lt;Instruction&gt;</center>
        <center><h3><b>Some Terminology</b></b></h3></center>
        </br>
        It helps to know what some things are called. Here are some basic terms to get you rolling.
        </br>
        <ol>
        <li style="margin-top:3px;"><b>Statement</b> - A statement is a line of executable code in assembly. This is also know as an
        executable statement. An executable statement starts with an instruction.
        <li style="margin-top:3px;"><b>Instruction</b> - An instruction is a command for the computer to do something. Ex. Add.
        <li style="margin-top:3px;"><b>Operand</b> - An operand is a value or component passed to an instruction. For example, if you
        want to add two numbers, you need two numbers to add. The number in this case are the operands.
        <li style="margin-top:3px;"><b>Variable</b> - A variable is a location to store data. Think of this as a box. You stuff anything
        you want to save for later into the box.
        </ol>
        </br>
        The exercise for this lesson shows a simple assembly
        program. It does nothing but call an exit routine. Take a minute to study the structure
        of the program.
        </body>
        ]]>
    </string>
    <string name="about_headline">iAssembly by Anthony M. Santiago</string>
    <string name="about_desc">iAssembly is an x86 simulator using NASM as a base for syntax. I believe it
        is beneficial to know how low level operations work on a basic level. This app aims
    to guide beginners or even experienced programmers in learning the basics.</string>
    <string name="about_feedback">Feedback or Suggestions? Email me at: syncedsoftware@gmail.com</string>
    <string untranslatable ="true" name="supported_keywords_list">resb, resw, resq, resq, rest, resdq, resy, resz, db, dw, dd, dq,dt, dow, dy, dz,section, segment, data, bss, text , equ</string>
    <string name="supported_keywords_label">Supported Keywords</string>
    <string untranslatable ="true" name="sys_exit_label">sys_exit (1) - Exiting</string>
    <string untranslatable ="true" name="sys_write_label">sys_write (4) - Printing Strings</string>
    <string name="supported_int_label">Supported Interrupts</string>
    <string name="exit_label">Exit</string>
    <string name="check_label">Check</string>
    <string name="task_label">Task</string>
    <string name="step">Step</string>
    <string name="execute">Execute</string>
    <string name="execute_program">Execute Program</string>
    <string name="exit_exercise">Exit Exercise</string>
    <string name="check_exercise">Check Exercise</string>
    <string name="view_task">View Task</string>
    <string name="feedback_label">Feedback</string>
</resources>