<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.syncedsoftware.iassembly.MainActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_submit_feedback"
        android:orderInCategory="100"
        android:title="@string/feedback_label"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_supported_ops"
        android:orderInCategory="100"
        android:title="@string/action_supported_ops"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_load"
        app:showAsAction="ifRoom"
        android:title="Load" />

    <item
        android:id="@+id/action_save"
        app:showAsAction="ifRoom"
        android:title="Save" />

    <item
        android:id="@+id/action_delete"
        app:showAsAction="ifRoom"
        android:title="Delete" />

    <item
        android:id="@+id/action_new"
        app:showAsAction="ifRoom"
        android:title="New" />
</menu>
